--- a/app/build.gradle
+++ b/app/build.gradle
@@ -49,4 +49,6 @@ dependencies {
 
     /*图片加载*/
     compile 'com.github.bumptech.glide:glide:3.6.1'
+    /*圆形图片*/
+    compile 'de.hdodenhof:circleimageview:2.1.0'
 }
