--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,6 +2,14 @@ apply plugin: 'com.android.application'
 apply plugin: 'com.neenbedankt.android-apt'
 
 android {
+    signingConfigs {
+        bowensign {
+            keyAlias 'com.bowen'
+            keyPassword 'wenhua'
+            storeFile file('F:/studio_demo/BaiDuLocationDemo/bowen')
+            storePassword 'wenhua'
+        }
+    }
     compileSdkVersion 25
     buildToolsVersion "25.0.2"
     defaultConfig {
@@ -16,9 +24,12 @@ android {
         release {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
+            signingConfig signingConfigs.bowensign
+        }
+        debug {
+            signingConfig signingConfigs.bowensign
         }
     }
-
     sourceSets {
         main {
             jniLibs.srcDir 'libs'
@@ -46,9 +57,9 @@ dependencies {
     /*rxjava合并请求,解决网络请求问题*/
     compile 'com.squareup.retrofit2:adapter-rxjava:2+'
     compile files('libs/fastjson-1.2.17.jar')
-
     /*图片加载*/
     compile 'com.github.bumptech.glide:glide:3.6.1'
     /*圆形图片*/
     compile 'de.hdodenhof:circleimageview:2.1.0'
+    compile files('libs/tbs_v2.6.0.jar')
 }
