--- a/app/build.gradle
+++ b/app/build.gradle
@@ -61,5 +61,12 @@ dependencies {
     compile 'com.github.bumptech.glide:glide:3.6.1'
     /*圆形图片*/
     compile 'de.hdodenhof:circleimageview:2.1.0'
+    /*使用QQ浏览器内核*/
     compile files('libs/tbs_v2.6.0.jar')
+
+    /*图片选择库*/
+    compile 'com.lzy.widget:imagepicker:0.3.2'
+
+    /*用于解决动态权限问题的*/
+    compile 'com.tbruyelle.rxpermissions:rxpermissions:0.9.3@aar'
 }
