--- a/app/build.gradle
+++ b/app/build.gradle
@@ -13,7 +13,7 @@ android {
     compileSdkVersion 25
     buildToolsVersion "25.0.2"
     defaultConfig {
-        applicationId "com.bowen.zdsjclub"
+        applicationId "com.bowen.hannengclub"
         minSdkVersion 14
         targetSdkVersion 25
         versionCode 1
