--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -24,7 +24,7 @@
     <!-- 可选 -->
     <uses-permission android:name="android.permission.READ_LOGS" />
 
-    <!-- 【必须】 信鸽SDK所需权限   -->
+    <!-- 【必须】 信鸽SDK所需权限 -->
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.READ_PHONE_STATE" />
     <uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
@@ -54,9 +54,7 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".MainActivity" >
-
-        </activity>
+        <activity android:name=".MainActivity"></activity>
         <activity
             android:name=".activity.StartActivity"
             android:screenOrientation="portrait"
@@ -72,8 +70,10 @@
         <meta-data
             android:name="com.baidu.lbsapi.API_KEY"
             android:value="G3P4NAoLS2wSNSsuOI6GsPbQ3G1UvoVw" />
-       <!-- G3P4NAoLS2wSNSsuOI6GsPbQ3G1UvoVw
-        l2N5o9QBV3M9g6FKS2h6hS56rMU77tLG-->
+        <!--
+        G3P4NAoLS2wSNSsuOI6GsPbQ3G1UvoVw
+        l2N5o9QBV3M9g6FKS2h6hS56rMU77tLG
+        -->
         <service
             android:name="com.baidu.location.f"
             android:enabled="true"
@@ -84,7 +84,8 @@
             android:value="999c552a6f1007e21ee641c7862f3983" />
 
         <activity
-            android:name=".activity.HomeActivity" android:launchMode="singleTop"
+            android:name=".activity.HomeActivity"
+            android:launchMode="singleTop"
             android:stateNotNeeded="true" />
         <activity
             android:name=".activity.LoginActivity"
@@ -181,48 +182,45 @@
         <meta-data
             android:name="XG_V2_ACCESS_KEY"
             android:value="AR88VBFP665T" />
-
         <meta-data
             android:name="UMENG_APPKEY"
-            android:value="590bd6337f2c74038e001dde" >
-        </meta-data>
+            android:value="590bd6337f2c74038e001dde"></meta-data>
 
         <activity
             android:name=".WBShareActivity"
             android:configChanges="keyboardHidden|orientation"
-            android:screenOrientation="portrait" >
+            android:screenOrientation="portrait">
             <intent-filter>
                 <action android:name="com.sina.weibo.sdk.action.ACTION_SDK_REQ_ACTIVITY" />
+
                 <category android:name="android.intent.category.DEFAULT" />
             </intent-filter>
         </activity>
-
         <activity
             android:name=".wxapi.WXEntryActivity"
             android:configChanges="keyboardHidden|orientation|screenSize"
             android:exported="true"
             android:screenOrientation="portrait"
             android:theme="@android:style/Theme.Translucent.NoTitleBar" />
-
         <activity
             android:name="com.umeng.qq.tencent.AuthActivity"
             android:launchMode="singleTask"
-            android:noHistory="true" >
-
+            android:noHistory="true">
             <intent-filter>
                 <action android:name="android.intent.action.VIEW" />
+
                 <category android:name="android.intent.category.DEFAULT" />
                 <category android:name="android.intent.category.BROWSABLE" />
+
                 <data android:scheme="tencent100424468" />
             </intent-filter>
         </activity>
-
         <activity
             android:name="com.umeng.qq.tencent.AssistActivity"
+            android:configChanges="orientation|keyboardHidden|screenSize"
             android:screenOrientation="portrait"
-            android:theme="@android:style/Theme.Translucent.NoTitleBar"
-            android:configChanges="orientation|keyboardHidden|screenSize"/>
-
+            android:theme="@android:style/Theme.Translucent.NoTitleBar" />
+        <activity android:name=".activity.ThirdLoginBindActivity"></activity>
     </application>
 
 </manifest>
